--- a/src/App.css
+++ b/src/App.css
@@ -294,10 +294,10 @@ footer .footer-media-container svg:hover{
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 20px 0;
   overflow-y: scroll;
 }
 .model-container{
-  position: relative;
   width: 400px;
   min-height: 200px;
   display: flex;
@@ -416,4 +416,14 @@ footer .footer-media-container svg:hover{
 }
 .model input[value='Confirm']:hover{
   background-color:var(--confirm-hover-color);
+}
+.model .table-form td[class*='action-cell']{
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 10px;
+}
+.model .table-form td[class*='action-cell'] svg{
+  fill: var(--warning-color);
 }
