--- a/src/App.css
+++ b/src/App.css
@@ -284,6 +284,7 @@ footer .footer-media-container svg{
 footer .footer-media-container svg:hover{
   transform: scale(1.1);
 }
+/*model*/
 .model{
   position: fixed;
   top: 0;
@@ -315,6 +316,7 @@ footer .footer-media-container svg:hover{
   top: 10px;
   right: 10px;
 }
+/*photo model*/
 .model-container input[type='file']{
   display: none;
 }
@@ -333,6 +335,7 @@ footer .footer-media-container svg:hover{
 .model-container .photo-label img{
   width: 100%;
   height: 100%;
+  object-fit: cover;
 }
 .model-container .photo-label:hover{
   background-color: rgba(0, 0,0,.4);
@@ -347,6 +350,10 @@ footer .footer-media-container svg:hover{
   right: 5px;
   z-index: 2;
 }
+.model-container .photo-box svg:hover{
+  background-color: rgba(255,255,255,.9);
+}
+/*menu model*/
 .add-item-form{
   display: flex;
   flex-direction: column;
