--- a/src/App.css
+++ b/src/App.css
@@ -439,3 +439,54 @@ footer .footer-media-container svg:hover{
   width: 100px;
   font-size: 20px;
 }
+/*notification model*/
+.notification-model{
+  height: auto;
+  width: auto;
+  background-color: var(--primary-color);
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  padding: 10px;
+  border-radius: 5px;
+  position: absolute;
+  left: 50%;
+  z-index: 10;
+  transform: translateX(-50%);
+  animation-name: simple;
+  animation-duration:.3s;
+  animation-fill-mode: forwards;
+}
+@keyframes simple {
+  0%   {
+    top: 0;
+    opacity: 0;
+  }
+  100% {
+    top: 10%;
+    opacity: 1;
+  }
+}
+.note-box{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  padding: 10px;
+}
+.note-box svg:hover{
+  cursor: unset;
+}
+.green{
+  color: var(--notification-color);
+  border-left: 6px solid var(--notification-color);
+}
+.red{
+  color: var(--warning-color);
+  border-left: 6px solid var(--warning-color);
+}
+.red svg{
+  fill: var(--warning-color);
+}
+.green svg{
+  fill: var(--notification-color);
+}
