--- a/src/App.css
+++ b/src/App.css
@@ -414,23 +414,25 @@ footer .footer-media-container svg:hover{
 .model .table-form{
   width: 100%;
 }
-.model input[value='Confirm'],.model input[value='Update'],.model input[class*='delete-btn']{
+.model input[class*='delete-btn'],.model input[class*='confirm-btn']{
   padding: 10px;
   border-radius: 5px;
-  background-color: var(--confirm-color);
   color: var(--primary-color);
   font-size: 20px;
   border: none;
   width: 100%;
+}
+.model input[class*='confirm-btn']{
+  background-color: var(--confirm-color);
+}
+.model input[class*='confirm-btn']:hover{
+  background-color:var(--confirm-hover-color);
 }
 .model input[class*='delete-btn']{
   background-color: var(--warning-color);
 }
 .model input[class*='delete-btn']:hover{
   background-color: var(--warning-hover-color);
-}
-.model input[value='Confirm']:hover,.model input[value='Update']:hover{
-  background-color:var(--confirm-hover-color);
 }
 .model .table-form td[class*='action-cell']{
   display: flex;
