--- a/src/App.css
+++ b/src/App.css
@@ -223,42 +223,51 @@ main form .form-checkbox{
   gap: 10px;
 }
 main .cards-gallery{
-  background-color: red;
-  width: 30%;
-  position: fixed;
+  background-color:var(--primary-color);
+  position: absolute;
   right: 0;
   top: 0;
   bottom: 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
-  gap: 10px;
+  left: 0;
+  padding: 20px;
 }
-main .cards-gallery > *{
-  width: 100%;
-  background-color: green;
+main .cards-gallery svg{
+  position: absolute;
+  top: 20px;
+  right: 20px;
 }
 main .cards-gallery .cards-container{
-  flex: 1;
-  padding: 10px;
+  width: 100%;
+  height: 100%;
   display: flex;
-  flex-direction: column;
-  gap: 5px;
+  flex-direction: row;
+  justify-content: center;
+  align-content:center ;
+  gap: 20px;
+  flex-wrap: wrap;
   overflow-y: scroll;
 }
 main .cards-gallery .card-space{
-  background-color: #E2D784;
+  background-color: var(--secondary-2-color);
+  color: var(--secondary-1-color);
   border-radius: 10px;
-  width: 100%;
-  min-height: 100px;
+  font-size: 20px;
+  width: 30%;
+  min-width: 300px;
+  min-height: 150px;
   cursor: pointer;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
-
+main .cards-gallery .card-space:hover{
+  background-color:var(--secondary-1-color);
+  color: var(--secondary-2-color);
+}
+main .cards-gallery .card-add{
+  background-color: rgba(0, 0, 0, .2);
+}
 footer{
   background-color: var(--secondary-3-color);
   padding:20px;
